Vehicle route price calculation
